Play a network game on the real desktop match screen
Every other network test uses a client that answers prompts and draws
nothing, so none of them reaches the code that reads the state a client is
sent: opening a match, building a field per player, painting a zone. A
client seeded by a snapshot differs from one sent a full state exactly
there, and a fault in that code survives any number of headless games.

The match screen is final, so the client wraps one rather than extending it.
Display and state go to the real screen; the methods that ask a question are
answered by the harness, because on a real screen those open a dialog and
wait for someone who is not there.

Any throwable reaching a thread's top level, the event dispatch thread
included, fails the run. Completing is not evidence by itself: the faults
this exists to catch are logged and swallowed while the game carries on.

Spawned clients also need the module access the desktop application is
launched with. Without it the screen's saved layout cannot be read, and the
screen then never finishes opening, which looks like a hang rather than an
error.

One four-player Commander game, gated behind run.stress.tests and skipped
where there is no display.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01N57duNzDPNt5g78wmk7XQj